--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.3",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
@@ -34,4 +34,5 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
+  
 }
